<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:contentDescription="@string/app_background" />

    <TextView
        android:id="@+id/birdshooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_title"
        android:layout_above="@id/play"
        android:textColor="#FFFFFF"
        android:textSize="64sp" />
    <TextView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/highScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/birdshooter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/high_score"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/volumeCtrl"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_volume_up_24"
        android:contentDescription="@string/toggle_volume" />

</RelativeLayout>